  scanning.
- Added: AbstractMap<?,?> and changed class hierarchy that fit its policies.
  This change will not really be noticed by end-users. 
- Added: AbstractSet<?,?> and changed class hierarchy that fit its policies.
  This change will not really be noticed by end-users. 
- Changed: A method or two has been made public in order to accommodate for
  the previous changes.
  
Changed in 2.18.0
=================

- Added: com.blackrook.commons.logger package for logging.

Changed in 2.17.0
=================

- Requires: Java 7 or higher.
- Added: Common.parse*Array(...) methods for parsing arrays of primitives from
  strings.
- Added: Common.printBuffer(...) debug methods for printing the contents of 
  buffers, both direct and in-Java.
- Added: com.blackrook.commons.Singleton for managing and creating singleton
  instances of classes.
- Added: com.blackrook.commons.CommonTokenizer for tokenizing an average line of text.
- Added: com.blackrook.commons.Counter: a thread-safe counter object.

Changed in 2.16.0
=================

- Added: Common.getURLsForFiles(File ... files).
- Added: Reflect.createForType(...) methods for type conversions.
- Changed: AbstractVector constructor with capacity did not obey the "if
  capacity <= 0, capacity is 1" policy.
- Changed: Source indentation style.
 

Changed in 2.15.0
=================

- Added: Common.close(...) methods for SQL-related objects.
- Added: com.blackrook.commons.TypeProfile, from Commons Lang.
- Added: Reflect.getFieldValue(Field, Object).

Changed in 2.14.2
=================

- Changed/Fixed: Common.getHTTP*() now supports HTTPS. It didn't before.
- Changed: Some documentation cleanup.

Changed in 2.14.1
=================

- Changed/Fixed: Some documentation cleanup.

Changed in 2.14.0
=================

- Added: Reflect.isArray(Object).
- Added: Reflect.getPublicFields(Object).
- Fixed: Reflect.toAutoboxedType(Class) for promotion of autoboxed types. 